fix for content section covering footer

--- a/gui/static/css/stats.css
+++ b/gui/static/css/stats.css
@@ -31,8 +31,12 @@ input[type=text] {
   top: 82%;
 }
 
-.loader {
+#stats .loader {
   padding: 15% 45%;
   position: absolute;
   z-index: 9999999999999;
+}
+
+.rs-push, .rs-footer, .rs-nav-footer {
+  margin-top: 10px;
 }
